--- a/Inutivent-iOS/Main.storyboard
+++ b/Inutivent-iOS/Main.storyboard
@@ -177,7 +177,7 @@
                                                     <attributedString key="attributedText">
                                                         <fragment content="Details">
                                                             <attributes>
-                                                                <font key="NSFont" size="17" name="HelveticaNeue"/>
+                                                                <font key="NSFont" size="18" name="HelveticaNeue"/>
                                                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                                             </attributes>
                                                         </fragment>
@@ -205,23 +205,31 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SsL-5a-ibg">
-                                                    <rect key="frame" x="15" y="11" width="100" height="21"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SsL-5a-ibg">
+                                                    <rect key="frame" x="15" y="11" width="92" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="25A-YI-gnp">
-                                                    <rect key="frame" x="125" y="7" width="175" height="30"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="25A-YI-gnp">
+                                                    <rect key="frame" x="122" y="11" width="190" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no"/>
                                                     <connections>
                                                         <action selector="onExitName:" destination="fb1-U5-Cxx" eventType="editingDidEndOnExit" id="8mG-yk-ITq"/>
                                                     </connections>
                                                 </textField>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="25A-YI-gnp" secondAttribute="centerY" id="8zz-O7-JKS"/>
+                                                <constraint firstAttribute="trailing" secondItem="25A-YI-gnp" secondAttribute="trailing" constant="8" id="Ej5-cW-TGF"/>
+                                                <constraint firstItem="25A-YI-gnp" firstAttribute="leading" secondItem="SsL-5a-ibg" secondAttribute="trailing" constant="15" id="Joo-hY-zQ9"/>
+                                                <constraint firstAttribute="centerY" secondItem="SsL-5a-ibg" secondAttribute="centerY" id="XIo-XZ-6FL"/>
+                                                <constraint firstItem="SsL-5a-ibg" firstAttribute="leading" secondItem="Nta-zG-sos" secondAttribute="leading" constant="15" id="e2J-07-Vnj"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -374,17 +382,20 @@
                                     <rect key="frame" x="8" y="8" width="236" height="72"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IM6-VW-4nr">
-                                    <rect key="frame" x="252" y="8" width="60" height="30"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IM6-VW-4nr">
+                                    <rect key="frame" x="252" y="8" width="60" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="NtP-yM-OWP"/>
+                                        <constraint firstAttribute="height" constant="44" id="z6e-8S-y8D"/>
                                     </constraints>
-                                    <state key="normal" title="Post">
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <state key="normal" title="Post"/>
+                                    <state key="highlighted">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
                                         <action selector="onTapPost:" destination="pPT-im-HkY" eventType="touchUpInside" id="gYP-ph-pdY"/>
@@ -417,7 +428,7 @@
                                             <attributedString key="attributedText">
                                                 <fragment content="Label Text bla bla bla bla">
                                                     <attributes>
-                                                        <font key="NSFont" size="17" name=".LucidaGrandeUI"/>
+                                                        <font key="NSFont" size="18" name=".LucidaGrandeUI"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                                     </attributes>
                                                 </fragment>
@@ -447,6 +458,7 @@
                     <navigationItem key="navigationItem" title="Comments" id="OfL-ld-Z7T"/>
                     <connections>
                         <outlet property="editorTextView" destination="aKe-9X-hJG" id="9XK-lV-UMU"/>
+                        <outlet property="postButton" destination="IM6-VW-4nr" id="WLZ-HK-fX5"/>
                         <outlet property="tableView" destination="tgS-Le-QHC" id="gTb-X6-X6d"/>
                     </connections>
                 </tableViewController>
